--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1> Hello </h1>
+            <h1> Coding Quiz </h1>
         </header>
 
         <main>
