--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <div id = "high-score-section" hidden>
 
             </div>
+            <form hidden id="form-id">
+                <input type="text" id="username" class="form-control" placeholder="Enter your Username...">
+                <button type="submit">Submit</button>
+              </form>
         </main>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
