--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
             crossorigin="anonymous"
             ></script>
             <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-            <script src="./assets/js/script.js"></script>
+            <script src="./Assets/js/script.js"></script>
     </body>
 </html>
